--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_BASE_URL=https://api.weatherapi.com/v1/forecast.json
-REACT_APP_API_KEY=insert your API key here
+REACT_APP_API_KEY=5d958ff722764acb90862551223107
